# ember

./: DESIGN.md  README.md  pyproject.toml  run.jsonl
ember/: __init__.py  env.py  fire_sim.py  floor_plan.py  models.py  narrative.py  rubrics.py  tasks.py
ember/server/: app.py  dashboard.html
ember_world.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: run_llm_agent.py  run_random_agent.py  run_scripted_agent.py
examples/traces/: escape_basic_seed11.jsonl  gemma_escape_basic_seed11.jsonl  key_and_door_seed11.jsonl  rescue_seed11.jsonl
